--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -1,10 +1,12 @@
-FROM python:3.10-slim
+FROM co2-base
 
 WORKDIR /app
+ENV PYTHONPATH=/app
 
-COPY requirements.txt ./
+COPY backend/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+COPY backend/ .
+COPY scripts/ /app/scripts
 
-CMD ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
