--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -1,10 +1,13 @@
-FROM python:3.10-slim
+FROM co2-base
 
 WORKDIR /app
+ENV PYTHONPATH=/app
 
-COPY requirements.txt ./
+
+COPY frontend/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+COPY frontend/ .
+COPY scripts/ /app/scripts
 
-CMD ["streamlit", "run", "frontend/app.py", "--server.port=8501", "--server.address=0.0.0.0"]
+CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.address=0.0.0.0"]
